# test_task_paritet

./: README.md  db.sqlite3  pyproject.toml
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_testtaskmodel_delete_test_task_model.py  0003_alter_testtaskmodel_picture.py  0004_alter_testtaskmodel_picture.py
backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
